syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.funcards.user.proto.v1";
option java_outer_classname = "UserProto";
option go_package = "./;v1";
option csharp_namespace = "FunCardsOrg.Grpc.V1";

package proto.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service User {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc GetUsers(UsersRequest) returns (UsersResponse);
  rpc GetUserByEmailAndPassword(UserByEmailAndPasswordRequest) returns (UserResponse);
}

message CreateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  repeated string roles = 5;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string old_password = 4;
  string new_password = 5;
  repeated string roles = 6;
}

message DeleteUserRequest {
  string user_id = 1;
}

message UsersRequest {
  uint64 page_index = 1;
  uint32 page_size = 2;
  repeated string user_ids = 3;
  repeated string emails = 4;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  repeated string roles = 4;
  google.protobuf.Timestamp created_at = 5;
}

message UsersResponse {
  uint64 total = 1;
  repeated UserResponse users = 2;
}

message UserByEmailAndPasswordRequest {
  string email = 1;
  string password = 2;
}
